18-11-24/networkpolicies/deployment-bar.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: bar-ns
  labels:
    labelsNamespace: bar-ns
spec: {}
status: {}


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
  namespace: bar-ns
  labels:
    app: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: ckad-formation-ingress
        image: lbouquin/ckad-formation-ingress:0.0.22
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unautrebar
  namespace: bar-ns
  labels:
    app: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: ckad-formation-ingress
        image: lbouquin/ckad-formation-ingress:0.0.22
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unautrebar42
  namespace: bar-ns
  labels:
    app: test42
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test42
  template:
    metadata:
      labels:
        app: test42
    spec:
      containers:
      - name: ckad-formation-ingress
        image: lbouquin/ckad-formation-ingress:0.0.22
        ports:
        - containerPort: 80
