18-11-24/networkpolicies/deployment-foo.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: foo-ns
  labels:
    labelsNamespace: foo-ns
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: foo-ns
  labels:
    app: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: ckad-formation-ingress
        image: lbouquin/ckad-formation-ingress:0.0.22
        ports:
        - containerPort: 80
