18-11-24/networkpolicies/deployment-test42-toto.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test42
  labels:
    app: test42
spec: {}
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toto
  namespace: test42
  labels:
    app: toto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toto
  template:
    metadata:
      labels:
        app: toto
    spec:
      volumes:

      containers:
      - name: ckad-formation-ingress
        image: lbouquin/ckad-formation-ingress:0.0.22
        ports:
        - containerPort: 80
