18-11-24/networkpolicies/deployment-toto.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: toto-ns
  labels:
    labelsNamespace: toto-ns
spec: {}
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toto
  namespace: toto-ns
  labels:
    app: toto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toto
  template:
    metadata:
      labels:
        app: toto
    spec:
      containers:
      - name: ckad-formation-ingress
        image: lbouquin/ckad-formation-ingress:0.0.22
        ports:
        - containerPort: 80
