18-11-24/networkpolicies/service-bar.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar
  namespace: bar-ns
spec:
  selector:
    app: bar
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
