18-11-24/networkpolicies/service-foo.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: foo-ns
spec:
  selector:
    app: foo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
