18-11-24/networkpolicies/service-toto.yaml
apiVersion: v1
kind: Service
metadata:
  name: toto
  namespace: toto-ns
spec:
  selector:
    app: toto
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
